Added authentication setting for server